--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
          </div>
          <!-- Footer -->
          <div id="footer">
-            <a href="">SPACEX © 2024</a>
-            <a href="">PRIVACY POLICY</a>
-            <a href="">SUPPLIERS</a>
+            <a href="https://voyager211.github.io/SpaceX-Clone-static/" class="footer-content">SPACEX © 2024</a>
+            <a href="" class="bold">PRIVACY POLICY</a>
+            <a href="" class="bold">SUPPLIERS</a>
          </div>
     
     </body>
